fixed a size of the circle behind the pokemon

--- a/style.css
+++ b/style.css
@@ -61,13 +61,15 @@ h1 {
 .card-circle {
 	content: "";
 	display: block;
-	width: 50%;
-	height: 40%;
+	width:  12em;
+	height: 12em;
 	border-radius: 50%;
 	background-color: #fff;
 	opacity: .7;
 	position: absolute;
-	left: 25%;
+	left: 50%;
+	top: 30%;
+	transform: translate(-50%, -50%)
 }
 
 .steel {
